# rust-for-bitcoin

./: Cargo.toml  README.md  config.json
src/: cli.rs  config.rs  error.rs  main.rs  rpc.rs
src/commands/: address.rs  blockchain.rs  mod.rs  wallet.rs
