[package]
name = "rust-for-bitcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"

